parser/src/test/resources/corpus/invalid/05_unmatched_quote.ff
rule "Unmatched Quote {
  description: "the rule name string never closes"
}
